<resources>
    <string name="app_name">PetBetter</string>
    <string name="title_activity_maps">Map</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="vet_listing_name">Ivanhoe Veterinary Clinic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_account"><u>Don\'t have an account yet?</u></string>
    <string name="add_new_facility"><u>Anonymously Add a New Facility</u></string>
    <string name="sample_address">Solenad 1 Nuvali, Sta. Rosa Laguna</string>
    <string name="sample_name">John Ivanhoe</string>
    <string name="sample_clinic">Ivanhoe Veterinary Clinic</string>
    <string name="sample_operating">Operating hours: </string>
    <string name="sample_open_time">8:00 am</string>
    <string name="sample_close_time">5:00 pm</string>
    <string name="sample_specialty">Animal Behaviour</string>
    <string name="landline">Landline: </string>
    <string name="sample_landline"> 8704421</string>
    <string name="sample_rating">4.5</string>
    <string name="action_search">Search</string>
    <string name="login_button">Log In</string>
    <string name="next_button">Next</string>
    <string name="signup_button">Sign up</string>
    <string name="reply">Reply</string>

    <string-array name="searchSpinner">
        <item>Facilities</item>
        <item>Veterinarians</item>
        <item>Pet Owners</item>
    </string-array>

    <string-array name="typeSpinner">
        <item>Save in Bookmarks</item>
        <item>Register as Clinic</item>
    </string-array>
    <string-array name="facilityOpenTimeSpinner">
        <item>0:00</item>
        <item>1:00</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>4:00</item>
        <item>5:00</item>
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string-array name="veterinarySpecialtySpinner">
        <item>Anesthesia</item>
        <item>Animal Behavior</item>
        <item>Animal Cardiology</item>
        <item>Animal Dentistry</item>
        <item>Animal Dermatology</item>
        <item>Animal Neurology</item>
        <item>Animal Oncology</item>
        <item>Animal Ophthalmology</item>
        <item>Animal Orthopaedics</item>
        <item>Animal Welfare</item>
        <item>Emergency and Critical Care</item>
        <item>Canine/Feline Practice</item>
        <item>Nutrition</item>
    </string-array>
    <string name="veterinarySpecialtyPrompt">Select a Specialization</string>
    <string name="email_address_hint"><font size="14">Email Address</font></string>
    <string name="password_hint"><font size="14">Password</font></string>
</resources>
