<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/petProfileToolbar"
        layout="@layout/toolbar_viewpost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/petProfileToolbar">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/clinicProfileImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/sample_vet_clinic" />

            </RelativeLayout>

            <TextView
                android:id="@+id/clinicName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/sample_clinic"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/clinicAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/sample_address"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"

                    android:text="Operating hours: "
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/clinicOpenTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/sample_open_time"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text=" _ "
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/clinicCloseTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/sample_close_time"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"

                    android:text="Landline: "
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/clinicLandLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"

                    android:text="@string/sample_landline"
                    android:textColor="@color/black"
                    android:textSize="15dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/clinicRatingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rating: "
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/clinicRatingNumerator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_rating"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/clinicRatingDenominator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/5"
                    android:textColor="@color/black" />

            </LinearLayout>

            <Button
                android:id="@+id/viewClinicMapButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                android:background="@color/main_Color"

                android:text="View in Map"
                android:textColor="@color/main_White"
                android:textSize="18dp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/bookmarkClinicButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="Bookmark" />

                <Button
                    android:id="@+id/rateClinicButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="Rate" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>